ENS tools: publish safe resolver + resolve f3nix.wspr.* + docs

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ target/
 
 # Local DB / runtime artifacts
 mailbox.db*
+
+# local: contactcards is its own repo
+/contactcards/
+
+# build artifacts
+/ens/dist/
+/ens/dist-old/
