ENS tools: publish safe resolver + resolve f3nix.wspr.* + docs

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ ens/scripts/hash_delegation.js
 
 # contactcards is a separate repo (GitHub Pages)
 /contactcards/
+
+# contactcards is a separate repo (GitHub Pages)
+/contactcards/
