--- a/ens/package.json
+++ b/ens/package.json
@@ -12,8 +12,12 @@
     "sign": "node --loader ts-node/esm scripts/sign_profile.ts"
   },
   "dependencies": {
-    "ethers": "^6.13.0",
-    "libsodium-wrappers": "^0.7.15",
+    "ethers": "^6.16.0",
+    "libsodium": "^0.7.16",
+    "libsodium-wrappers": "^0.7.16",
+    "libsodium-wrappers-sumo": "^0.7.16",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
