--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "type": "module",
   "dependencies": {
+    "@noble/ed25519": "^3.0.0",
+    "@noble/hashes": "^2.0.1",
+    "@stablelib/x25519": "^1.0.3",
     "ethers": "^6.16.0",
-    "@stablelib/x25519": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
   }
 }
