--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "type": "module",
   "dependencies": {
+    "@chainsafe/libp2p-noise": "^17.0.0",
+    "@libp2p/bootstrap": "^12.0.10",
+    "@libp2p/kad-dht": "^16.1.2",
+    "@libp2p/mplex": "^12.0.10",
+    "@libp2p/tcp": "^11.0.9",
+    "@libp2p/websockets": "^10.1.2",
     "@noble/ed25519": "^3.0.0",
     "@noble/hashes": "^2.0.1",
     "@stablelib/x25519": "^1.0.3",
     "ethers": "^6.16.0",
+    "it-length-prefixed": "^10.0.1",
+    "libp2p": "^3.1.2",
+    "multiformats": "^13.4.2",
     "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1"
+    "tweetnacl-util": "^0.15.1",
+    "uint8arrays": "^5.1.0"
   }
 }
