--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "dependencies": {
     "@chainsafe/libp2p-noise": "^17.0.0",
     "@libp2p/bootstrap": "^12.0.10",
+    "@libp2p/identify": "^4.0.9",
     "@libp2p/kad-dht": "^16.1.2",
     "@libp2p/mplex": "^12.0.10",
+    "@libp2p/ping": "^3.0.9",
     "@libp2p/tcp": "^11.0.9",
     "@libp2p/websockets": "^10.1.2",
     "@noble/ed25519": "^3.0.0",
